--- a/style.css
+++ b/style.css
@@ -54,7 +54,7 @@ nav ul li a {
 }
 
 nav ul li a:hover {
-    color: #f1948a; /* Highlight on hover */
+    color: #C70039; /* Highlight on hover */
 }
 
 /* Dropdown menu styles */
@@ -78,7 +78,7 @@ nav ul li a:hover {
 }
 
 .dropdown-content a:hover {
-    background-color: #f1948a; /* Background highlight on hover */
+    background-color: #C70039; /* Background highlight on hover */
     color: #fff; /* Text color when hovered */
 }
 
@@ -94,7 +94,7 @@ nav ul li a:hover {
 }
 
 .sign-in-btn {
-    background-color: #f1948a;
+    background-color: #C70039;
     color: #fff;
     padding: 0.5rem 1rem;
     border: none;
@@ -117,7 +117,7 @@ nav ul li a:hover {
 
 /* Home Section */
 #home {
-    background-color: #f1948a; /* Set background color */
+    background-color: #C70039; /* Set background color */
     color: #000; /* Black font color */
     text-align: center;
     padding: 5rem 2rem; /* Add spacing */
@@ -154,7 +154,7 @@ nav ul {
 }
 
 nav ul li a {
-    background-color: #f1948a; /* Match the button's color */
+    background-color: #C70039; /* Match the button's color */
     color: #fff;
     text-decoration: none;
     padding: 0.5rem 1rem;
@@ -193,7 +193,7 @@ nav ul li a:hover {
 }
 
 .dropdown-content a:hover {
-    background-color: #f1948a;
+    background-color: #C70039;
     color: #fff;
 }
 
@@ -209,7 +209,7 @@ nav ul li a:hover {
 }
 
 .sign-in-btn, .language-selector {
-    background-color: #f1948a;
+    background-color: #C70039;
     color: #fff;
     padding: 0.5rem 1rem;
     border: none;
