--- a/style.css
+++ b/style.css
@@ -48,7 +48,8 @@ nav ul li {
 
 nav ul li a {
     text-decoration: none;
-    color: #333;
+    background-color: #C70039; /* for button-like navigation links */
+    color: #fff;
     font-size: 1rem;
     padding: 0.5rem 1rem;
 }
@@ -108,8 +109,9 @@ nav ul li a:hover {
 }
 
 .language-selector {
+    background-color: #fff;
     padding: 0.5rem;
-    border: 1px solid #ddd;
+    border: 1px solid #C70039;
     border-radius: 5px;
     font-size: 1rem;
     cursor: pointer;
