--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@ nav ul li {
 
 nav ul li a {
     text-decoration: none;
-    background-color: #C70039; /* for button-like navigation links */
+    background-color: #93785b; /* for button-like navigation links */
     color: #fff;
     font-size: 1rem;
     padding: 0.5rem 1rem;
@@ -79,7 +79,7 @@ nav ul li a:hover {
 }
 
 .dropdown-content a:hover {
-    background-color: #C70039; /* Background highlight on hover */
+    background-color: #93785b; /* Background highlight on hover */
     color: #fff; /* Text color when hovered */
 }
 
@@ -95,7 +95,7 @@ nav ul li a:hover {
 }
 
 .sign-in-btn {
-    background-color: #C70039;
+    background-color: #93785b;
     color: #fff;
     padding: 0.5rem 1rem;
     border: none;
@@ -111,7 +111,7 @@ nav ul li a:hover {
 .language-selector {
     background-color: #fff;
     padding: 0.5rem;
-    border: 1px solid #C70039;
+    border: 1px solid #93785b;
     border-radius: 5px;
     font-size: 1rem;
     cursor: pointer;
@@ -119,7 +119,7 @@ nav ul li a:hover {
 
 /* Home Section */
 #home {
-    background-color: #C70039; /* Set background color */
+    background-color: #93785b; /* Set background color */
     color: #000; /* Black font color */
     text-align: center;
     padding: 5rem 2rem; /* Add spacing */
@@ -156,7 +156,7 @@ nav ul {
 }
 
 nav ul li a {
-    background-color: #C70039; /* Match the button's color */
+    background-color: #93785b; /* Match the button's color */
     color: #fff;
     text-decoration: none;
     padding: 0.5rem 1rem;
@@ -195,7 +195,7 @@ nav ul li a:hover {
 }
 
 .dropdown-content a:hover {
-    background-color: #C70039;
+    background-color: #93785b;
     color: #fff;
 }
 
@@ -211,7 +211,7 @@ nav ul li a:hover {
 }
 
 .sign-in-btn, .language-selector {
-    background-color: #C70039;
+    background-color: #93785b;
     color: #fff;
     padding: 0.5rem 1rem;
     border: none;
