--- a/style.css
+++ b/style.css
@@ -144,7 +144,7 @@ nav ul li a:hover {
 }
 #home {
     position: relative; /* Enables layering */
-    background: url('Mufasa background.jpeg') no-repeat center center/cover;
+    background: url('Mufasa background.jpg') no-repeat center center/cover;
     color: #000; /* Black text color */
     text-align: center;
     padding: 5rem 2rem; /* Spacing */
