--- a/style.css
+++ b/style.css
@@ -9,8 +9,9 @@
 /* General body styles */
 body {
     line-height: 1.6;
-    background-color: #fff;
+    background-color: #93785b;
     color: #333;
+    align-items: center;
 }
 
 /* Header styles */
